Added error handling

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
       <div class="input-group mb-3 currency-input">
         <span class="input-group-text">$</span>
         <input
-          type="text"
+          type="number"
           class="form-control amount"
           aria-label="Amount (to the nearest dollar)"
           placeholder="Amount in dollars"
